2007-11-04  Brian Gough  <bjg@network-theory.co.uk>

	* ldfrexp.c (gsl_ldexp): handle full range of double precision
	(gsl_frexp): handle full range of double precision

2007-07-30  Brian Gough  <bjg@network-theory.co.uk>

	* infnan.c (gsl_finite): use isfinite (c99) in preference to
	finite

2007-07-23  Brian Gough  <bjg@network-theory.co.uk>

	* log1p.c (gsl_log1p): added another volatile to prevent unwanted
	optimisation

2007-04-03  Brian Gough  <bjg@r51e.network-theory.co.uk>

	* infnan.c (gsl_isinf): now return -1 for -Inf instead of +1

	* test.c (main): add test for -inf

	* infnan.c (gsl_finite): always use finite where available
	(gsl_isnan): always use isnan where available
	(gsl_isinf): always use isinf where available

2005-11-14  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: added tests for constants

2005-04-05  Brian Gough  <bjg@network-theory.co.uk>

	* infnan.c: added #include ieeefp.h for Solaris

2004-12-22  Brian Gough  <bjg@network-theory.co.uk>

	* infnan.c (gsl_isinf): added missing return type of int

2003-09-02  Brian Gough  <bjg@network-theory.co.uk>

	* infnan.c (gsl_isinf): added fallback for missing isinf (IRIX)

2003-07-24  Brian Gough  <bjg@network-theory.co.uk>

	* invhyp.c: removed duplicate declarations

	* ldfrexp.c: removed duplicate declarations

	* expm1.c: removed duplicate declaration of gsl_expm1

2003-01-02  Brian Gough  <brian.gough@network-theory.co.uk>

	* infnan.c (gsl_isnan): fall back to isnan,isinf,finite/isfinite
	if available and IEEE comparisons do not work

Wed Dec 11 17:29:24 2002  Brian Gough  <brian.gough@network-theory.co.uk>

	* ldfrexp.c: fix include to use <gsl/gsl_math.h> instead of
 	<gsl_math.h>

2002-08-25  Brian Gough  <bjg@network-theory.co.uk>

	* fcmp.c (gsl_fcmp): approximate comparison of floating point
	numbers using Knuth's algorithm

	* ldfrexp.c (gsl_ldexp): portable replacement for ldexp()
	(gsl_frexp): portable replacement for frexp()
